--- a/src/view/DominoViewMockVisualEditor.mxml
+++ b/src/view/DominoViewMockVisualEditor.mxml
@@ -35,6 +35,7 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:view="view.*" 
+		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:dataTable="view.primeFaces.surfaceComponents.components.DataTable"
 		 creationComplete="onComplete()"
 		 xmlns:collapsiblehdivider="components.collapsibleHDivider.*">
@@ -44,10 +45,10 @@
 					editable="true" sortableColumns="false" draggableColumns="true"
 					dragEnabled="true" dragMoveEnabled="true" dropEnabled="true"
 					dragStart="onRowDragStarts(event)" dragDrop="onRowDragAndDropped(event)"
-					dataProvider="{rowsDataProvider}">
+					dataProvider="{rowsDataProvider}" click="onDataGridClick(event)">
                         <s:columns>
                            <s:ArrayList>
-								<s:GridColumn dataField="label" headerText="Row number"/>
+								<s:GridColumn headerRenderer="components.renderers.DominoViewEditorHeaderRenderer" dataField="label"  headerText="Row number" id="column_0" />
 							</s:ArrayList>
                         </s:columns>
 		        </s:DataGrid>
@@ -55,29 +56,37 @@
                         <s:VGroup horizontalAlign="left" verticalAlign="top" percentHeight="100" percentWidth="100"
                                     paddingLeft="0" paddingRight="0" id="dominoViewPropertyEditor">
                         	<view:PropertyEditorHeader id="propertyEditorHeader" width="100%" />
-							<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
+							
+							<s:VGroup id="viewSetPanel" top="10" includeInLayout="false" visible="false">
+								<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
 									<s:Label text="Viwe Name:" width="100%" />
 									 <s:TextInput id="viewNameInput"
                                             text=""  width="100" maxChars="100" 
 											editable="false"
                                             enter="viewNameInput_changeHandler(event)" focusOut="viewNameInput_changeHandler(event)" skinClass="skins.TextInputSkin" prompt="This is title for the action"/>
                                    
-							 </s:FormItem> 
-                            <s:FormItem  skinClass="skins.FormItemSkin" width="100%">
-                            
-                            
-                                <s:Label text="Configuration(View):View Selection" width="100%" direction="rtl"/>
-                                <s:TextArea id="viewSelection"
-                                text="" width="100%" minWidth="156" editable="true" selectable="true"
-                                prompt="View Selection"
-								change="viewFormula_changeHandler(event)"
-                                />
-                               
-                                
-                            
-                            </s:FormItem> 
-							<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
-							<s:BorderContainer cornerRadius="0"  borderStyle="solid" borderWeight="1" left="10" right="10" top="10" bottom="10" id="columnPanel">
+									 </s:FormItem> 
+										<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
+										
+										
+											<s:Label text="Configuration(View):View Selection" width="100%" direction="rtl"/>
+											<s:TextArea id="viewSelection"
+											text="" width="100%" minWidth="156" editable="true" selectable="true"
+											prompt="View Selection"
+											change="viewFormula_changeHandler(event)"
+											/>
+										
+											
+										
+										</s:FormItem> 
+							</s:VGroup>
+							
+							
+							<mx:Accordion id="columnAccordion" width="100%" height="100%" includeInLayout="false" visible="false">
+							
+								<mx:VBox  horizontalAlign="left" label="Column Setting-Basic" verticalAlign="top" percentHeight="100" 
+		   paddingLeft="5" paddingTop="10" paddingBottom="10" id="columnBasicSetPanel"  >	
+		   								<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
 								<s:VGroup horizontalAlign="left" verticalAlign="top" percentHeight="100" paddingLeft="5" paddingTop="10" paddingBottom="10">
 									<s:Label id="columnHeaderText"
 											textAlign="start"
@@ -88,25 +97,51 @@
 											text="Column Header Text"/>
 									<s:TextInput id="titleInput"
                      						text=""  width="100" skinClass="skins.TextInputSkin" prompt="Column title"/>	
-									<s:Label id="columnValue"
-											textAlign="start"
-											verticalAlign="middle"
-											fontWeight="bold"
-											maxDisplayedLines="1" fontSize="13"
-											left="5" right="0" verticalCenter="0" 
-											text="Column"/>
+										
+										<s:Label id="columnValue"
+												textAlign="start"
+												verticalAlign="middle"
+												fontWeight="bold"
+												maxDisplayedLines="1" fontSize="13"
+												left="5" right="10" verticalCenter="0" 
+												text="Width:"/>
+										<s:TextInput id="columWidth"
+										text="70"  width="100" skinClass="skins.TextInputSkin" prompt="Column width"/>	
+										
 										<s:HGroup>
 											<s:RadioButton id="columnValueFieldRadioBtn" label="Field" groupName="columnValueType"/>
-											<s:RadioButton id="columnValueFormulaRadioBtn" label="Formula" groupName="columnValueType"/>	
+											<s:RadioButton id="columnValueFormulaRadioBtn" label="Formula" groupName="columnValueType" selected="true"/>	
 										</s:HGroup>	
 									 <s:TextArea id="columnValueFormula"
 										text="SELECT $FormName = Form" width="100%" minWidth="156" editable="true" selectable="true"
 										prompt="Formula for column value"
 										/>
+
+									 <s:FormItem label="Show twistie when row is expandable" skinClass="skins.FormItemSkin">
+										<s:CheckBox id="check"
+													selected="true"
+													change="check_changeHandler(event)"/>
+									</s:FormItem>		
+
 										<s:Button id="newColumnBtn" label="Add Column"   height="25" width="100"  click="addColumn()"/>			
 								</s:VGroup>
-							</s:BorderContainer>
+							
 							 </s:FormItem> 
+		   						</mx:VBox>
+
+							<mx:VBox  horizontalAlign="left" id="columnSortSetPanel"  label="Column Setting-Sort Type" verticalAlign="top" percentHeight="100" 
+		   paddingLeft="5" paddingTop="10" paddingBottom="10"  >	
+							</mx:VBox>
+							<mx:VBox  horizontalAlign="left" id="columnFormatSetPanel" label="Column Setting-Format" verticalAlign="top" percentHeight="100" 
+		   paddingLeft="5" paddingTop="10" paddingBottom="10" >	
+							</mx:VBox>
+							<mx:VBox  horizontalAlign="left" id="columnFontSetPanel" label="Column Setting-Font" verticalAlign="top" percentHeight="100" 
+		   paddingLeft="5" paddingTop="10" paddingBottom="10"  >	
+							</mx:VBox>
+							</mx:Accordion>
+							
+							
+							
 					</s:VGroup>		   
                 </s:Group>
 	</collapsiblehdivider:CollapsibleEdgeContainersHDividerGroup>
@@ -129,16 +164,23 @@
 
 	import view.interfaces.IVisualEditorLibraryBridge;
 	import spark.components.Alert;
+	import components.renderers.DominoViewEditorHeaderRenderer;
+
+	import view.suportClasses.events.DominoViewColumnClickEvent;
 
 	private var viewFileName:String =  "" ;
 
 	private var _hasChanged:Boolean = false;
 
+	private var columnCount:int = 1;
 
-	  public function get hasChanged():Boolean
-        {
-            return _hasChanged;
-        }
+	private var showColumns:Boolean = false;
+
+
+	public function get hasChanged():Boolean
+	{
+		return _hasChanged;
+	}
 
 	public function set hasChanged(value:Boolean):void
 	{
@@ -168,6 +210,10 @@
        
     }
 
+	private function check_changeHandler(event:Event):void
+	{
+	}
+
 	public function onComplete():void {
 
 		//inital the view columns
@@ -179,16 +225,73 @@
 		tmpColumn.headerText="#"
 		tmpColumn.dataField="id"
 		tmpColumn.width=30;
+		tmpColumn.headerRenderer= new ClassFactory(DominoViewEditorHeaderRenderer);
+		//add column click listener
 		initalCol.addItem(tmpColumn);
 		dgColumns.columns=initalCol;
 
-		
+		viewSetPanel.visible =viewSetPanel.includeInLayout = true;
+		columnAccordion.visible =columnAccordion.includeInLayout = false;
+		dgColumns.addEventListener(DominoViewColumnClickEvent.COLUMN_CLICK, viewColumnClick);
 		
 
 		//add property change listener
 		//dominoViewPropertyEditor.addEventListener("viewFormulaChanged", onDominoViewPropertyChanged);
     
+		
     }
+
+	
+	public function viewColumnClick(event:DominoViewColumnClickEvent):void{
+		showColumns=true;
+		
+		viewSetPanel.visible =viewSetPanel.includeInLayout = false;
+		columnAccordion.visible =columnAccordion.includeInLayout = true;
+		//loading the column setting to property
+		if(event.value){
+			var xml:XML=loadLocalFileToXML(MoonshineBridgeUtils.currentFilePath);
+			if(xml!=null){
+				var columnHeaderxml:XML=xml.column.columnheader.(@title==event.value)[0];
+				if(columnHeaderxml!=null){
+					titleInput.text=columnHeaderxml.@title;
+					var column:XML=columnHeaderxml.parent();
+
+					if(column!=null){
+						
+						if(column.code==null || column.code.toString()=="" ){
+							columnValueType.selectedValue="Field"
+							columnValueFieldRadioBtn.selected=true;
+							columnValueFormulaRadioBtn.selected=false;
+							columnValueFormula.text=column.@itemname;
+						}else{
+
+							columnValueType.selectedValue="Formula"
+							columnValueFormulaRadioBtn.selected=true;
+							columnValueFieldRadioBtn.selected=false;
+							columnValueFormula.text=column.code.formula;
+
+						}
+					}
+				}
+				
+			}
+
+		}
+		
+		
+	
+	}
+
+	private function onDataGridClick(event:MouseEvent):void
+	{
+		if(showColumns==false){
+			viewSetPanel.visible =viewSetPanel.includeInLayout = true;
+			columnAccordion.visible =columnAccordion.includeInLayout = false;
+		}
+		showColumns=false;
+		
+		
+	}
 
 	private function onDominoViewPropertyChanged(event:Event):void
 	{
@@ -199,49 +302,58 @@
 
 	private function addColumn():void 
 	{
-		var columnXML:XML=new XML("<column width='30'/> ");
-		var codeXML:XML=null;
-		columnXML.@sort="ascending";
-		var preFix:String="";
-		if (columnValueType.selectedValue=="Field"){
-			preFix="FormFile:";
-			columnXML.@itemname=titleInput.text;
-		}else  if(columnValueType.selectedValue=="Formula"){
-			preFix="Formula:";
-			codeXML=new XML("<code/>");
-			codeXML.@event="value";
-			var codeFormulaXML:XML=new XML("<formula>"+columnValueFormula.text+"</formula>");
-			codeXML.appendChild(codeFormulaXML);
-		}
-		var tmpColumn:GridColumn=new GridColumn();
-		tmpColumn.headerText=titleInput.text;
-		tmpColumn.dataField=encodeBase64ForColumnDataField(preFix,columnValueFormula.text);
-		dgColumns.columns.addItem(tmpColumn);
-		hasChanged=true;
 
-		var xml:XML=loadLocalFileToXML(MoonshineBridgeUtils.currentFilePath);
-		if(xml!=null){
-			xml=xml.replace("$ViewName","NewView");
-			var columnHeaderXML:XML=new XML("<columnheader/> ");
-			columnHeaderXML.@title=titleInput.text;
-			var columnHeaderFontXML:XML = new XML("<font/>");
-			columnHeaderFontXML.@size="9pt";
-			columnHeaderFontXML.@style="bold";
-			columnHeaderXML.appendChild(columnHeaderFontXML);
-
-			columnXML.appendChild(columnHeaderXML);
-			if(codeXML!=null){
-				columnXML.appendChild(codeXML);
+		if(titleInput.text==null || titleInput.text.length==0){
+			Alert.show("You must should input the column title name at first.");
+		} else {
+			var columnXML:XML=new XML("<column width='30'/> ");
+			var codeXML:XML=null;
+			columnXML.@sort="ascending";
+			var preFix:String="";
+			if (columnValueType.selectedValue=="Field"){
+				preFix="FormFile:";
+				columnXML.@itemname=titleInput.text;
+			}else  if(columnValueType.selectedValue=="Formula"){
+				preFix="Formula:";
+				codeXML=new XML("<code/>");
+				codeXML.@event="value";
+				var codeFormulaXML:XML=new XML("<formula>"+columnValueFormula.text+"</formula>");
+				codeXML.appendChild(codeFormulaXML);
 			}
-
-			xml.appendChild(columnXML);
-
-			_fileStreamMoonshine.open(_fileMoonshine, FileMode.WRITE);
-			_fileStreamMoonshine.writeUTFBytes(xml.toXMLString());
-			_fileStreamMoonshine.close();
+			var tmpColumn:GridColumn=new GridColumn();
+			tmpColumn.headerText=titleInput.text;
+			tmpColumn.dataField=encodeBase64ForColumnDataField(preFix,columnValueFormula.text);
+						
+			dgColumns.columns.addItem(tmpColumn);
 			
+			hasChanged=true;
 
+			var xml:XML=loadLocalFileToXML(MoonshineBridgeUtils.currentFilePath);
+			if(xml!=null){
+				xml=xml.replace("$ViewName","NewView");
+				var columnHeaderXML:XML=new XML("<columnheader/> ");
+				columnHeaderXML.@title=titleInput.text;
+				var columnHeaderFontXML:XML = new XML("<font/>");
+				columnHeaderFontXML.@size="9pt";
+				columnHeaderFontXML.@style="bold";
+				columnHeaderXML.appendChild(columnHeaderFontXML);
+
+				columnXML.appendChild(columnHeaderXML);
+				if(codeXML!=null){
+					columnXML.appendChild(codeXML);
+				}
+
+				xml.appendChild(columnXML);
+
+				_fileStreamMoonshine.open(_fileMoonshine, FileMode.WRITE);
+				_fileStreamMoonshine.writeUTFBytes(xml.toXMLString());
+				_fileStreamMoonshine.close();
+				
+
+			}
 		}
+
+		
 
 	}
 
@@ -256,7 +368,7 @@
 	private function viewFormula_changeHandler(event:Event):void
 	{
 		viewFormula=columnValueFormula.text;
-		this.dispatchEvent(new Event(Event.CHANGE));
+		dominoViewPropertyEditor.dispatchEvent(new PropertyEditorChangeEvent(PropertyEditorChangeEvent.PROPERTY_EDITOR_CHANGED, null));
 		hasChanged=true;
 	}
 
@@ -353,8 +465,11 @@
 							}
 							
 						}
+
+						tmpColumn.headerRenderer= new ClassFactory(DominoViewEditorHeaderRenderer);
 						
 						dgColumns.columns.addItem(tmpColumn);
+						
 					}
 				}
 			//inital the view select formla
